# AI_mcp_convercation

./: main.py  main2.py  prompt.md  pyproject.toml
