[project]
name = "mcp-service-tool"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "cosyvoice>=0.0.8",
    "dotenv>=0.9.9",
    "mcp>=1.13.1",
    "modelscope>=1.29.2",
    "pyqt6>=6.9.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sounddevice>=0.5.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
